--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--Website Made By Logan Damon-->
+    <!--Site Made By Logan Damon-->
     <title>Home | Noodle, Inc</title>
     <link rel="stylesheet" type="text/css" href="videolayout.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
