--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ img {
 
 @media (max-width: 767px) {
   .fullscreen-bg {
-    background: url('https://static.wixstatic.com/media/a8623f_b9462bf2e94f4200b22b30434f7c3e1af000.jpg/v1/fill/w_960,h_540,al_c,q_85/a8623f_b9462bf2e94f4200b22b30434f7c3e1af000.webp') center center / cover no-repeat;
+    background: url('https://dgllg7gnr5c6q.cloudfront.net/uploads/2017/04/26173349/image-home-mobile-2.png') center center / cover no-repeat;
   }
 
   .fullscreen-bg__video {
@@ -93,8 +93,7 @@ img {
 <img src="https://static.wixstatic.com/media/a8623f_dc72d8bdabef430ab4cf337bc9d0f51c~mv2.png/v1/fill/w_586,h_299,al_c/a8623f_dc72d8bdabef430ab4cf337bc9d0f51c~mv2.png">
 
 <div class="fullscreen-bg">
-    <video loop muted autoplay poster="https://static.wixstatic.com/media/a8623f_b9462bf2e94f4200b22b30434f7c3e1af000.jpg/v1/fill/w_960,h_540,al_c,q_85/a8623f_b9462bf2e94f4200b22b30434f7c3e1af000.webp" class="fullscreen-bg__video">
-        <source src="https://storage.googleapis.com/video.wixstatic.com/video/a8623f_b9462bf2e94f4200b22b30434f7c3e1a/480p/mp4/file.mp4" type="video/mp4">
+    <video loop muted autoplay poster="https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/3142/8/215711686/744867747.mp4?token=1532105160-0xb8ddc722a4c447dedc1242029a83b9960f31a8fd" type="video/mp4">
     </video>
 </div>
 
